# PredictaContainer

./: main.py  pyproject.toml
